Incorporate ephemeral resource library ID into resource URIs